--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -233,7 +233,7 @@
                                 <ng-container matColumnDef="hash">
                                   <th mat-header-cell *matHeaderCellDef> Hash </th>
                                   <td mat-cell *matCellDef="let tx">
-                                    <span (click)="openTxDialog(tx.txhash)" style="cursor: pointer;" >
+                                    <span (click)="openTxDialogHash(tx.txhash)" style="cursor: pointer;" >
                                       {{ tx.txhash }}
                                     </span>
                                     <i  class="ion-ios-copy copy-button" 
