WiP: Improving mobile support. Popup components refactored and resetted style; Angular modules cleaned up

--- a/src/app/components/popups/block/block.component.html
+++ b/src/app/components/popups/block/block.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="row">
+    <div class="popup-row row">
       <div class="col-12">  
         <mdb-card class="card-1 mat-elevation-z8">
             <mdb-card-header>
