--- a/src/app/components/popups/block/block.component.scss
+++ b/src/app/components/popups/block/block.component.scss
@@ -1,11 +1,11 @@
-.mat-card {
-  max-width: 90%;
-  margin: 0 auto;
-}
+// .mat-card {
+//   max-width: 90%;
+//   margin: 0 auto;
+// }
 
-.card-1 {
-  margin-bottom: 20px;
-}
+// .card-1 {
+//   margin-bottom: 20px;
+// }
 
 .card-title {
   margin: 0;
