--- a/src/app/components/popups/gov-detail/gov-detail.component.html
+++ b/src/app/components/popups/gov-detail/gov-detail.component.html
@@ -1,5 +1,5 @@
-<section class="section">
-    <div class="row main-row">
+<section>
+    <div class="popup-row row main-row">
 
         <div class="col-md-4">
           <div class="mb-5">
