--- a/src/app/components/popups/tx/tx.component.html
+++ b/src/app/components/popups/tx/tx.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="row">
+  <div class="popup-row row">
     <!-- First column -->
     <div class="col-12">
       <mdb-card class="card-1 mat-elevation-z8 mb-3">
