--- a/src/app/components/popups/validator/validator.component.html
+++ b/src/app/components/popups/validator/validator.component.html
@@ -1,5 +1,5 @@
-<section class="py-0">
-    <div class="row">
+<section>
+    <div class="popup-row row">
         <!-- First column -->
         <div class="px-0 col-lg-6 col-md-12">
           <mdb-card class="rounded-0 testimonial-card">
