--- a/src/app/components/popups/account-detail/account-detail.component.html
+++ b/src/app/components/popups/account-detail/account-detail.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="row">
+  <div class="popup-row row">
     <div class="col-12">
       <mdb-card class="testimonial-card mat-elevation-z8 mb-3">
         <mdb-card-header>
