--- a/src/app/components/popups/account-detail/account-detail.component.scss
+++ b/src/app/components/popups/account-detail/account-detail.component.scss
@@ -1,12 +1,12 @@
 .card.card-cascade .view.gradient-card-header {
-  padding: 1rem 1rem;
-  text-align: center;
+    padding: 1rem 1rem;
+    text-align: center;
 }
 
 .card.card-cascade h3,
 .card.card-cascade h4
 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .blue-gradient {
@@ -20,20 +20,13 @@
 
 .card.card-cascade {
   .view {
-    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
   }
 }
 
-section {
-  // background-color: #121212;
-  margin: 0 auto;
-}
-
-.row {
-  max-width: 100%;
-  max-height: 100%;
-  // background-color: #111923;
-}
+// .row {
+//   max-width: 90%;
+// }
 
 .testimonial-card {
   max-width: 100%;
@@ -41,20 +34,13 @@ section {
   margin-bottom: 0;
 }
 
+.card-title h1 {
+  color: #4a4a4a;
+}
+
 a {
   color: #4a4a4a;
   // font-size: 200%;
-}
-
-th, td {
-  overflow: hidden;
-  width:auto;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-mdb-card-title i {
-  font-size: 150%;
 }
 
 .card-title {
@@ -62,8 +48,8 @@ mdb-card-title i {
   font-size: 130%;
 }
 
-.card-title h1 {
-  color: black;
+.glance-title {
+  margin: 0 !important
 }
 
 mdb-card-title {
@@ -71,5 +57,5 @@ mdb-card-title {
 }
 
 mdb-card-header {
-  background-color: #3F51B5;
+background-color: #3F51B5;
 }
