WiP: Floating button for popups flow control added

--- a/src/app/components/popups/account-detail/account-detail.component.html
+++ b/src/app/components/popups/account-detail/account-detail.component.html
@@ -1,6 +1,7 @@
 <section>
+  <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
   <div class="popup-row row">
-    <div class="col-12">
+    <div class="px-0 col-12">
       <mdb-card class="testimonial-card mat-elevation-z8 mb-3">
         <mdb-card-header>
           <mdb-card-title>{{ delegator.address }}</mdb-card-title>
@@ -45,7 +46,7 @@
           </div>
         </mdb-card-body>
       </mdb-card>
-      <div class="col-12">
+      <div class="px-0 col-12">
         <div class="card mat-elevation-z8 mb-3">
           <mdb-card-header>
             <mdb-card-title>Transactions (Last 100 blocks)</mdb-card-title>
