--- a/src/app/components/popups/block/block.component.html
+++ b/src/app/components/popups/block/block.component.html
@@ -1,6 +1,7 @@
 <section>
+    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row">
-      <div class="col-12">  
+      <div class="px-0 col-12">  
         <mdb-card class="card-1 mat-elevation-z8">
             <mdb-card-header>
                 <mdb-card-title>Block {{ block.height }}</mdb-card-title>
@@ -47,7 +48,7 @@
             </mdb-card-body>
         </mdb-card>
     </div>
-    <div class="col-12">
+    <div class="px-0 col-12">
       <div class="my-5">
         <mdb-card alignment="left" class="mat-elevation-z8">
           <mdb-card-header>
