--- a/src/app/components/popups/gov-detail/gov-detail.component.html
+++ b/src/app/components/popups/gov-detail/gov-detail.component.html
@@ -1,7 +1,7 @@
 <section>
+    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row main-row">
-
-        <div class="col-md-4">
+        <div class="px-0 col-md-4">
           <div class="mb-5">
             <mdb-card style="max-width: 100%;" class="text-left mat-elevation-z8 mb-3">
                 <mdb-card-header>
@@ -71,7 +71,7 @@
           </div>
         </div>
 
-        <div class="col-md-8">
+        <div class="px-0 col-md-8">
             <div class="mb-5">
               <mdb-card alignment="left" class="mat-elevation-z8 mb-3">
                 <mdb-card-header>
