--- a/src/app/components/popups/tx/tx.component.html
+++ b/src/app/components/popups/tx/tx.component.html
@@ -1,7 +1,8 @@
 <section>
+  <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
   <div class="popup-row row">
     <!-- First column -->
-    <div class="col-12">
+    <div class="px-0 col-12">
       <mdb-card class="card-1 mat-elevation-z8 mb-3">
         <mdb-card-header>
             <mdb-card-title>Transaction Detail</mdb-card-title>
@@ -61,7 +62,7 @@
         </mdb-card-body>
       </mdb-card>
     </div>
-    <div class="col-12">
+    <div class="px-0 col-12">
       <mdb-card class="card-2 mat-elevation-z8 mb-3">
         <mdb-card-header>
             <mdb-card-title>Activity</mdb-card-title>
