--- a/src/app/components/popups/txs-list-card/txs-list-card.component.scss
+++ b/src/app/components/popups/txs-list-card/txs-list-card.component.scss
@@ -1,46 +1,36 @@
-.main-row {
-  max-width: 1200px;
-  margin:0 auto;
-  max-height: 600px;
-}
+// .main-row {
+//   max-width: 1200px;
+//   margin:0 auto;
+//   max-height: 600px;
+// }
 
-.row {
-  margin: 0 auto;
-}
+// .row {
+//   margin: 0 auto;
+// }
 
-.row-2 {
-  margin-top: 30px;
-}
+// .row-2 {
+//   margin-top: 30px;
+// }
 
-mat-card {
-  max-width: 100%;
-  background-color: white;
-  width: 800px;
-}
+// mat-card {
+//   max-width: 100%;
+//   background-color: white;
+//   width: 800px;
+// }
 
-li {
-  max-height: 200px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+// li {
+//   max-height: 200px;
+//   white-space: nowrap;
+//   overflow: hidden;
+//   text-overflow: ellipsis;
+// }
 
-.voters-list {
-  max-height: 200px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
 
-.proposal-title {
-  font-weight: 300;
-  font-size: 120%;
-}
-
-.card.card-cascade {
-  .view {
-      box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
-  }
-}
+// .card.card-cascade {
+//   .view {
+//       box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.15), 0 3px 12px 0 rgba(0, 0, 0, 0.15);
+//   }
+// }
 
 // .row {
 //     width: 900px;
