--- a/src/app/components/popups/validator/validator.component.html
+++ b/src/app/components/popups/validator/validator.component.html
@@ -1,11 +1,11 @@
 <section>
+    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row">
         <!-- First column -->
         <div class="px-0 col-lg-6 col-md-12">
           <mdb-card class="rounded-0 testimonial-card">
-                <!--Bacground color-->
-                <div class="rounded-0 card-up indigo">
-                </div>
+                <!--Bakcground color-->
+                <div style="height: 120px;" class="indigo"></div>
           
                 <!--Avatar-->
                 <div class="avatar mx-auto">
