WiP: Btn and Mat-tab overlaying bug fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -483,6 +483,6 @@ background-color: #aa66cc; }
   margin-bottom: 0;
 }
 
-.mat-tab-body-active {
-  z-index: 0 !important;
+.btn-floating {
+  z-index: 150;
 }
