New routes for popups, as well as different logic to load popups; Gov service partitially rebuilt with observables

--- a/src/app/components/popups/btn-close/btn-close.component.html
+++ b/src/app/components/popups/btn-close/btn-close.component.html
@@ -1,5 +1,5 @@
-<button class="btn btn-floating red waves-light" 
+<button class="btn btn-floating pink waves-light" 
   (click)="onCloseClick()" 
   style="right:35px; bottom:35px;">
-  <i class="fas fa-undo"></i>
+  <i class="fas fa-times"></i>
 </button>
