CSS fixes for desk

--- a/src/app/components/popups/account-detail/account-detail.component.html
+++ b/src/app/components/popups/account-detail/account-detail.component.html
@@ -6,7 +6,7 @@
         <mdb-card-header>
           <mdb-card-title>{{ delegator.address }}</mdb-card-title>
         </mdb-card-header>
-        <mdb-card-body>
+        <mdb-card-body >
           <div class="card">
             <div class="card-body">
               
@@ -51,7 +51,7 @@
           <mdb-card-header>
             <mdb-card-title>Transactions (Last 100 blocks)</mdb-card-title>
           </mdb-card-header>
-          <mdb-card-body>
+          <mdb-card-body class="px-0">
             <app-txs-list-card [address]="delegator.address"></app-txs-list-card>
           </mdb-card-body>
         </div>
