--- a/src/app/components/popups/txs-list-card/txs-list-card.component.html
+++ b/src/app/components/popups/txs-list-card/txs-list-card.component.html
@@ -1,5 +1,5 @@
 <mat-card alignment="left">
-    <div class="card-body">
+    <div class="card-body px-0 p-lg-3 col-12">
       <mat-tab-group (selectedTabChange)="onTabChange($event);">
         <mat-tab label="Staking">
           <table mat-table [dataSource]="dataSource" class="table large-header">
