--- a/src/app/components/popups/tx/tx.component.html
+++ b/src/app/components/popups/tx/tx.component.html
@@ -2,7 +2,7 @@
   <app-btn-close [link]="'tx/'+tx.hash" [dialogRef]="dialogRef"></app-btn-close>
   <div class="popup-row row">
     <!-- First column -->
-    <div class="px-0 col-12">
+    <div class="px-0  p-lg-3 col-12">
       <mdb-card class="card-1 mat-elevation-z8 mb-3">
         <mdb-card-header>
             <mdb-card-title>Transaction Detail</mdb-card-title>
@@ -62,7 +62,7 @@
         </mdb-card-body>
       </mdb-card>
     </div>
-    <div class="px-0 col-12">
+    <div class="px-0  p-lg-3 col-12">
       <mdb-card class="card-2 mat-elevation-z8 mb-3">
         <mdb-card-header>
             <mdb-card-title>Activity</mdb-card-title>
