WiP: external links for popups component added

--- a/src/app/components/popups/account-detail/account-detail.component.html
+++ b/src/app/components/popups/account-detail/account-detail.component.html
@@ -1,5 +1,5 @@
 <section>
-  <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
+  <app-btn-close [link]="'account/'+delegator.address" [dialogRef]="dialogRef"></app-btn-close>
   <div class="popup-row row">
     <div class="px-0 col-12">
       <mdb-card class="testimonial-card mat-elevation-z8 mb-3">
