--- a/src/app/components/popups/block/block.component.html
+++ b/src/app/components/popups/block/block.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
+    <app-btn-close [link]="'block/'+block.height" [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row">
       <div class="px-0 col-12">  
         <mdb-card class="card-1 mat-elevation-z8">
