--- a/src/app/components/popups/gov-detail/gov-detail.component.html
+++ b/src/app/components/popups/gov-detail/gov-detail.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
+    <app-btn-close [link]="'proposal/'+proposal.proposal_id" [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row main-row">
         <div class="px-0 col-md-4">
           <div class="mb-5">
