--- a/src/app/components/popups/tx/tx.component.html
+++ b/src/app/components/popups/tx/tx.component.html
@@ -1,5 +1,5 @@
 <section>
-  <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
+  <app-btn-close [link]="'tx/'+tx.hash" [dialogRef]="dialogRef"></app-btn-close>
   <div class="popup-row row">
     <!-- First column -->
     <div class="px-0 col-12">
