--- a/src/app/components/popups/validator/validator.component.html
+++ b/src/app/components/popups/validator/validator.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-btn-close [dialogRef]="dialogRef"></app-btn-close>
+    <app-btn-close [link]="'validator/'+validator.operator_address" [dialogRef]="dialogRef"></app-btn-close>
     <div class="popup-row row">
         <!-- First column -->
         <div class="px-0 col-lg-6 col-md-12">
