--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -1,33 +1,33 @@
 <div class="main-row">
-  <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'" [interval]="'0'"
-[animation]="'slide'">
+  <mdb-carousel [isControls]="true" 
+                class="carousel-multi-item multi-animation" 
+                [type]="'carousel-multi-item'" 
+                [interval]="'0'" 
+                [animation]="'slide'">
   <mdb-carousel-item *ngFor="let item of slides; let i = index">
-
     <!-- ----------- staus card ------------- -->
     <div class="row">
        <!--Grid column-->
-       <div class="col-xl-3 col-md-6 my-4" [ngClass]="{'d-none d-md-block': cardIndex !== 0}" *ngFor="let card of item; let cardIndex = index">
+       <div class="col-xl-3 col-md-6 my-4" 
+            [ngClass]="{'d-none d-md-block': cardIndex !== 0}" 
+            *ngFor="let card of item; let cardIndex = index">
         <!--Card-->
         <div class="card card-cascade cascading-admin-card">
-            <!--Card Data-->
-            <div class="admin-up">
-                <mdb-icon fas icon="{{card.icon}}" class="indigo" size="lg"></mdb-icon>
-                <div class="data">
-                    <p>{{card.title}}</p>
-                    <h4><strong>{{card.data}}</strong></h4>
-                </div>
+          <!--Card Data-->
+          <div class="admin-up">
+            <mdb-icon fas icon="{{card.icon}}" class="indigo" size="lg"></mdb-icon>
+            <div class="data">
+              <p>{{card.title}}</p>
+              <h4><strong>{{card.data}}</strong></h4>
             </div>
-            <!--/.Card Data-->
+          </div>
+          <!--/.Card Data-->
 
-            <!--Card content-->
-            <div class="card-body card-body-cascade">
-                <!-- <div class="progress">
-                    <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div> -->
-                <!--Text-->
-                <p class="card-text">last updated: {{card.timestamp}}</p>
-            </div>
-            <!--/.Card content-->
+          <!--Card content-->
+          <div class="card-body card-body-cascade">
+            <p class="card-text">last updated: {{card.timestamp}}</p>
+          </div>
+          <!--/.Card content-->
         </div>
         <!--/.Card-->
       </div>
