WiP: New ws service, work in other services

--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -1,7 +1,8 @@
 <section class="status-bar">
   <div class="row header-row">
     <h2 class="subtitle header-subtitle">
-      FIXME!
+      cosmoshub-2 
+      <!-- TODO FIX THIS! -->
       <!-- {{(consensusState | async).blocks[0]?.header.chain_id}} -->
     </h2>
   </div>
