--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -52,11 +52,11 @@
         <td mat-cell *matCellDef="let validator">  
           <span *ngIf="validator.jailed"><i class="ion-record jailed"></i></span>
           <span *ngIf="!validator.jailed"><i class="ion-record jailedNot"></i></span>
-          <span *ngFor="let block of (blocksState | async).blocks.slice(0,1)">
+          <span>
           {{
-            block.header?.height !== null
+            (consensusState|async).height !== '0'
                 ? ( validator.signing_info 
-                    ? (100-validator.signing_info.missed_blocks_counter/(block.header.height-validator.signing_info.start_height) | number:'.0') 
+                    ? (100-validator.signing_info.missed_blocks_counter/( (consensusState|async).height-validator.signing_info.start_height) | number:'.0') 
                     : 0 )
                 : 0
           }} %
@@ -117,6 +117,11 @@
         <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-log-in"></i>&nbsp;Self-Bond</th>
         <td mat-cell *matCellDef="let validator">
           {{validator.self_bond/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
+          <br>
+          <span class="table-subtitle" matTooltip="Percentage" matTooltipPosition="above">
+            <i class="ion-calculator"></i>&nbsp;
+            {{ validator.self_bond / validator.tokens | percent:'.2-2' }}
+          </span>
         </td>
       </ng-container>
           
