--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -67,7 +67,7 @@
       <ng-container matColumnDef="weight">
         <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-flash"></i>&nbsp;Voting Weight</th>
         <td mat-cell *matCellDef="let validator">
-          {{validator.tokens/1e6 | number:'.0-0'}}&nbsp;<span class="table-subtitle">({{validator.tokens/(appState | async).stakePool.bonded_tokens| percent:'.2-2'}})</span>
+          {{validator.tokens/1e6 | number:'.0-0'}}&nbsp;<span class="table-subtitle">({{validator.tokens/(stakeState | async).stakePool.bonded| percent:'.2-2'}})</span>
         </td>
       </ng-container>
     
